--- a/JfinalBlade/src/main/webapp/WEB-INF/view/common/_curd/_add.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/common/_curd/_add.html
@@ -35,10 +35,13 @@
 				@			else if(x.type=="image"){
 								<img id="_${x.index!}" data-type="image"  style="padding:2px; border:1px solid #ccc;cursor:pointer;width:${x.width!'168px'};height:${x.height!'110px'};" name="${table!x.table}.${x.index!}" src="${x.src!}"  onclick="window.open('${x.src!}');"></img>
 				@			}
+				@			else if(func.like(x.type,"selectself_")){
+				@                var num=strutil.replace(x.type,"selectself_","");
+								<blade:select code="${num}" name="${table!x.table}.${x.index!}" value="${x.value!0}" type="self" tail="${x.tail!}" intercept="${x.intercept!}" required="${x.required!}"/>
+				@			}
 				@			else if(func.like(x.type,"select_")){
 				@                var num=strutil.replace(x.type,"select_","");
-								<!-- <blade:select code="${num}" name="${table!x.table}.${x.index!}" value="${x.value!0}" type="dict" tail="${x.tail!}" intercept="${x.intercept!}" required="${x.required!}"/> -->
-								<blade:select code="${num}" name="${table!x.table}.${x.index!}" value="${x.value!0}" type="self" tail="${x.tail!}" intercept="${x.intercept!}" required="${x.required!}"/>
+								<blade:select code="${num}" name="${table!x.table}.${x.index!}" value="${x.value!0}" type="dict" tail="${x.tail!}" intercept="${x.intercept!}" required="${x.required!}"/>
 				@			}
 				@			else if(func.like(x.type,"combo_")){
 				@                var num=strutil.replace(x.type,"combo_","");
