--- a/JfinalBlade/src/main/webapp/WEB-INF/view/common/_curd/_view.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/common/_curd/_view.html
@@ -26,6 +26,10 @@
 				@			if(x.type=="textarea"){
 								<textarea id="_${x.index!}" style="height:${x.height!'200px'}" name="${table!}.${x.index!}" disabled value="${x.value!}" placeholder="${placeholder!}" class="form-control"></textarea>
 				@			}
+				@			else if(func.like(x.type,"selectself_")){
+				@                var num=strutil.replace(x.type,"selectself_","");
+								<blade:select code="${num}" name="${table!x.table}.${x.index!}" value="${x.value!0}" type="self" readOnly="true"/>
+				@			}
 				@			else if(x.type=="image"){
 								<img id="_${x.index!}"  data-type="image" data-auto="${x.auto!}" style="padding:2px; border:1px solid #ccc;cursor:pointer;width:${x.width!'168px'};height:${x.height!'110px'};" name="${table!x.table}.${x.index!}" src="${x.src!}"></img>
 				@			}
