--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType_add.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType_add.html
@@ -1,10 +1,17 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="UTF-8">
-<title>Insert title here</title>
-</head>
-<body>
+@layout("/common/_curd/_container.html"){
 
-</body>
-</html>
+	<form data-url="${basePath}/${code}/save" method="post" class="form-horizontal" role="form">
+		<!-- 表单 -->
+		@ var _col=[
+			@		{name:"ID", index:"id", type:"text"},
+			@		{name:"编码", index:"type_code", type:"text"},
+			@		{name:"课程", index:"type_name", type:"text"},
+			@		{name:"专业", index:"majorid", type:"selectself_major_name"}
+			@];
+			@ include("/common/_function/_search.html",{"col":_col}){}
+		
+		<!-- 按钮 -->
+		@ include("/common/_curd/_btn.html", {btn_save:"新增", btn_close:"关闭"}) {}
+	</form>
+
+@}
