--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/career/career_edit.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/career/career_edit.html
@@ -7,7 +7,7 @@
 		@ var _col=[
 		@			  {name:"职业名称", index:"career_name", type:"text",newline:true,length:3,required:"required"},
 		@			  {name:"编码", index:"career_code", type:"text",newline:false,length:3,required:"required"},
-		@			  {name:"课程阶段", index:"phase_id", type:"selectself_phase_name",newline:true,length:5,required:"required"},
+		@			  {name:"课程阶段", index:"phaseid", type:"selectself_phase_name",newline:true,length:5,required:"required"},
 		@			  {name:"图片", index:"image_url", type:"imgupload",newline:true,length:5,required:"required"}
 		@		   ];
 		@ include("/common/_curd/_edit.html", {"col":_col, "table":_table, "key":_key}){}
