--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/flavor/flavor_view.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/flavor/flavor_view.html
@@ -4,7 +4,8 @@
 		<!-- 表单 -->
 		@ var _col=[
 		@			  {name:"名称", index:"flavor_name", type:"text",newline:true,length:5,required:"required"},
-		@			  {name:"编码", index:"flavor_code", type:"text",newline:true,length:8,required:"required"}
+		@			  {name:"编码", index:"flavor_code", type:"text",newline:true,length:8,required:"required"},
+		@			  {name:"描述", index:"flavor_describe", type:"text",newline:true,length:8,required:"required"}
 		@		   ];
 		@ include("/common/_curd/_view.html", {"col":_col}){}
 		
