--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/student/student.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/student/student.html
@@ -11,10 +11,10 @@
 
 	function initGrid(){
 		var grid_url = ctx + "/${code}/list";
-		var _colnames = ["ID", "用户名", "密码", "专业"];
+		var _colnames = ["ID", "用户名", "角色", "专业"];
 		var _colmodel = [{name:"id", index:"id", width:100,hidden:true},
 						{name:"user_name", index:"user_name", width:100},
-						{name:"user_password", index:"user_password", width:100,hidden:true},
+						{name:"role", index:"role", width:100},
 						{name:"major_name", index:"majorid", width:100}];
 
 		jQuery(grid_selector).jqGrid({
@@ -42,7 +42,7 @@
 			@ var _col=[
 			@		{name:"ID", index:"id", type:"text"},
 			@		{name:"用户名", index:"user_name", type:"text"},
-			@		{name:"密码", index:"user_password", type:"text"},
+			@		{name:"角色", index:"role", type:"select_904"},
 			@		{name:"专业", index:"majorid", type:"selectself_major_name"}
 			@];
 			@ include("/common/_function/_search.html",{"col":_col}){}
