--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/project/project_view.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/project/project_view.html
@@ -11,7 +11,8 @@
 		@			{name:"硬件资源", index:"flavorid", type:"selectself_flavor_name",newline:false,length:3,required:"required"},
 		@			{name:"状态", index:"status", type:"select_902",newline:true,length:3,required:"required"},
 		@			{name:"创建时间", index:"create_time", type:"laydate",newline:false,length:4,required:"required"},
-		@			{name:"图片", index:"image_url", type:"imgupload",newline:true,length:5,required:"required"}
+		@			{name:"图片", index:"image_url", type:"imgupload",newline:true,length:5,required:"required"},
+		@			{name:"文档", index:"doc_url", type:"fileupload",newline:false,length:4,required:"required"}
 		@		   ];
 		@ include("/common/_curd/_view.html", {"col":_col}){}
 		
