--- a/JfinalBlade/src/main/webapp/WEB-INF/view/system/menu/menu_edit.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/system/menu/menu_edit.html
@@ -7,8 +7,8 @@
 		@ var _col=[
 		@			  {name:"菜单名称",index:"name",type:"text",newline:true,length:3,required:"required"},
 		@			  {name:"接口地址",index:"url",type:"text",newline:false,length:3},
-		@			  {name:"菜单编号",index:"code",type:"text",newline:true,length:3,disabled:"disabled"},
-		@			  {name:"菜单父编号",index:"pcode",type:"text",newline:false,length:3,disabled:"disabled"},
+		@			  {name:"菜单编号",index:"code",type:"text",newline:true,length:3},
+		@			  {name:"菜单父编号",index:"pcode",type:"text",newline:false,length:3},
 		@			  {name:"排序",index:"num",type:"number",newline:true,length:3,required:"required"},
 		@			  {name:"按钮别名",index:"alias",type:"text",newline:false,length:3},
 		@			  {name:"层级",index:"levels",type:"number",newline:true,length:3,required:"required min=1"},
