--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/student/student_add.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/student/student_add.html
@@ -7,7 +7,7 @@
 		@			  {name:"用户名", index:"user_name", type:"text",newline:true,length:5,required:"required"},
 		@			  {name:"密码", index:"user_password", type:"text",value:1234,newline:true,length:5,required:"required"},
 		@			  {name:"专业", index:"majorid", type:"selectself_major_name",newline:true,length:5,required:"required"},
-		@			  {name:"角色", index:"role", type:"select_904",newline:true,length:5,required:"required"}
+		@			  {name:"角色", index:"role", type:"select_904",value:1,newline:true,length:5,required:"required"}
 		@		   ];
 		@ include("/common/_curd/_add.html", {"col":_col, "table":_table}){}
 		
