--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType.html
@@ -14,8 +14,7 @@
 		var _colnames = ["ID", "编码", "课程类型", "专业"];
 		var _colmodel = [{name:"id", index:"id", width:100,hidden:true},
 						{name:"type_code", index:"type_code", width:100},
-						{name:"type_name", index:"type_name", width:100},
-						{name:"major_name", index:"majorid", width:100}];
+						{name:"type_name", index:"type_name", width:100}];
 		jQuery(grid_selector).jqGrid({
 			url : grid_url,
 		    shrinkToFit : true,
@@ -41,8 +40,7 @@
 			@ var _col=[
 			@		{name:"ID", index:"id", type:"text"},
 			@		{name:"编码", index:"type_code", type:"text"},
-			@		{name:"课程类型", index:"type_name", type:"text"},
-			@		{name:"专业", index:"majorid", type:"selectself_major_name"}
+			@		{name:"课程类型", index:"type_name", type:"text"}
 			@];
 			@ include("/common/_function/_search.html",{"col":_col}){}
 			<!-- 按钮 -->
