--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType_edit.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType_edit.html
@@ -6,8 +6,7 @@
 		@ var _key="id";
 		@ var _col=[
 		@			  {name:"编码", index:"type_code",  type:"text", newline:true,length:3,required:"required"},
-		@			  {name:"课程类型", index:"type_name",  type:"text", newline:false,length:3,required:"required"},
-		@			  {name:"专业", index:"majorid",    type:"selectself_major_name",newline:true,length:5,required:"required"}
+		@			  {name:"课程类型", index:"type_name",  type:"text", newline:false,length:3,required:"required"}
 		@		   ];
 		@ include("/common/_curd/_edit.html", {"col":_col, "table":_table, "key":_key}){}
 		
