--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType_view.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType_view.html
@@ -4,8 +4,7 @@
 		<!-- 表单 -->
 		@ var _col=[
 		@			  {name:"编码", index:"type_code",  type:"text", newline:true,length:3,required:"required"},
-		@			  {name:"课程类型", index:"type_name",  type:"text", newline:false,length:3,required:"required"},
-		@			  {name:"专业", index:"majorid",    type:"selectself_major_name",newline:true,length:5,required:"required"}
+		@			  {name:"课程类型", index:"type_name",  type:"text", newline:false,length:3,required:"required"}
 		@		   ];
 		@ include("/common/_curd/_view.html", {"col":_col}){}
 		
