--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/courseType/courseType.html
@@ -11,7 +11,7 @@
 
 	function initGrid(){
 		var grid_url = ctx + "/${code}/list";
-		var _colnames = ["ID", "编码", "课程类型", "专业"];
+		var _colnames = ["ID", "编码", "课程类型"];
 		var _colmodel = [{name:"id", index:"id", width:100,hidden:true},
 						{name:"type_code", index:"type_code", width:100},
 						{name:"type_name", index:"type_name", width:100}];
