--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/costree/costree.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/costree/costree.html
@@ -18,13 +18,11 @@
 	
 	function initGrid(){
 		var grid_url = ctx+"/${code}/list";//查询列表接口
-		var _colnames=[ "序列","部门简称", "部门全称","上级部门","排序","备注"];
-		var _colmodel=[   {name:"ID",index:"ID", width:80,hidden:true},
-						  {name:"SIMPLENAME",index:"SIMPLENAME", width:100},
-						  {name:"FULLNAME",index:"FULLNAME", width:150},
-						  {name:"PNAME",index:"PID", width:100},
-						  {name:"NUM",index:"NUM", width:30,align:"right"},
-						  {name:"TIPS",index:"TIPS", width:100}
+		var _colnames=[ "ID","名称", "上级名称","层级"];
+		var _colmodel=[   {name:"id",index:"id", width:80,hidden:true},
+						  {name:"name",index:"name", width:100},
+						  {name:"PNAME",index:"pid", width:100},
+						  {name:"level",index:"level", width:30}
 						];
 		
 		jQuery(grid_selector).jqGrid({
@@ -32,7 +30,7 @@
 		    shrinkToFit:true,//适用于较少字段,响应式
 			colNames:_colnames,
 			colModel:_colmodel, 
-			jsonReader:{id:"ID"},
+			jsonReader:{id:"id"},
 			pager : pager_selector,
 			postData: {sort: "id", order: "asc"}
 		});
@@ -50,9 +48,9 @@
 				callback: {
 					beforeClick: zTreeBeforeClick
 				}
+				
 			};
-		$.post("${basePath}/cache/deptTreeList", function(data){
-			
+		$.post("${basePath}/cache/cosTreeList", function(data){
 			if(data.code===0){
 				$.fn.zTree.init($("#zTree"), setting, data.data);
 			}
@@ -70,7 +68,7 @@
 		    return;
 	    }
 	    else{
-		    exwhere="{\"pId_equal\":\""+id+"\",\"or_id_equal\":\""+id+"\"}";
+		    exwhere="{\"pid_equal\":\""+id+"\",\"or_id_equal\":\""+id+"\"}";
 		    searchGrid();
 	    }
 
@@ -84,7 +82,7 @@
 		<div class="col-sm-3">
 			<div class="widget-box widget-color-blue2">
 				<div class="widget-header">
-					<h4 class="widget-title lighter smaller">部门组织架构</h4>
+					<h4 class="widget-title lighter smaller">课程体系</h4>
 				</div>
 
 				<div class="widget-body">
@@ -98,11 +96,7 @@
 		<div class="col-xs-9 tb-grid">
 			<!-- 配置查询 -->
 			@ var _col=[
-			@			  {name:"部门简称",index:"SIMPLENAME", type:"text"},
-			@			  {name:"部门全称",index:"FULLNAME", type:"text"},
-			@			  {name:"上级部门",index:"PID",type:"selectDept"},
-			@			  {name:"排序",index:"NUM",type:"text"},
-			@			  {name:"备注",index:"TIPS", type:"text"}
+			@			  {name:"名称",index:"name", type:"text"}
 			@		   ];
 			@ include("/common/_function/_search.html",{"col":_col}){}
 			<!-- 按钮组 -->
