--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/project/project.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/project/project.html
@@ -11,10 +11,10 @@
 
 	function initGrid(){
 		var grid_url = ctx + "/${code}/list";
-		var _colnames = ["ID", "项目名称", "类型", "镜像","网络","硬件配置","状态","创建时间"];
+		var _colnames = ["ID", "项目名称", "行业", "镜像","网络","硬件配置","状态","创建时间"];
 		var _colmodel = [{name:"id", index:"id", width:100,hidden:true},
 						{name:"project_name", index:"project_name", width:100},
-						{name:"type_name", index:"typeid", width:100},
+						{name:"industry_name", index:"industryid", width:100},
 						{name:"mirror_name", index:"mirrorid", width:100},
 						{name:"net_name", index:"netid", width:100},
 						{name:"flavor_name", index:"flavorid", width:100},
@@ -46,7 +46,7 @@
 			@ var _col=[
 			@		{name:"ID", index:"id", type:"text"},
 			@		{name:"项目名称", index:"project_name", type:"text"},
-			@		{name:"类型", index:"typeid", type:"selectself_type_name"},
+			@		{name:"行业", index:"industryid", type:"selectself_type_name"},
 			@		{name:"镜像", index:"mirrorid", type:"selectself_mirror_name"},
 			@		{name:"网络", index:"netid", type:"selectself_net_name"},
 			@		{name:"硬件资源", index:"flavorid", type:"selectself_flavor_name"},
