--- a/JfinalBlade/src/main/webapp/WEB-INF/view/platform/project/project_edit.html
+++ b/JfinalBlade/src/main/webapp/WEB-INF/view/platform/project/project_edit.html
@@ -5,16 +5,15 @@
 		@ var _table="yb_project";
 		@ var _key="id";
 		@ var _col=[
-		@			{name:"项目名称", index:"project_name", type:"text",newline:true,length:3,required:"required"},
-		@			{name:"编码", index:"project_code", type:"text",newline:false,length:3,required:"required"},
-		@			{name:"类型", index:"typeid", type:"selectself_type_name",newline:true,length:3,required:"required"},
+		@			{name:"项目名称", index:"project_name", type:"text",newline:true,length:5,required:"required"},
+		@			{name:"行业", index:"industryid", type:"select_905",newline:true,length:3,required:"required"},
 		@			{name:"镜像", index:"mirrorid", type:"selectself_mirror_name",newline:false,length:3,required:"required"},
 		@			{name:"网络", index:"netid", type:"selectself_net_name",newline:true,length:3,required:"required"},
 		@			{name:"硬件资源", index:"flavorid", type:"selectself_flavor_name",newline:false,length:3,required:"required"},
 		@			{name:"状态", index:"status", type:"select_902",newline:true,length:3,required:"required"},
 		@			{name:"创建时间", index:"create_time", type:"laydate",newline:false,length:4,required:"required"},
-		@			{name:"图片", index:"image_url", type:"imgupload",newline:true,length:6,required:"required"},
-		@			{name:"文档", index:"doc_url", type:"fileupload",newline:true,length:8,required:"required"}
+		@			{name:"图片", index:"image_url", type:"imgupload",newline:true,length:4,required:"required"},
+		@			{name:"文档", index:"doc_url", type:"fileupload",newline:false,length:4,required:"required"}
 		@		   ];
 		@ include("/common/_curd/_edit.html", {"col":_col, "table":_table, "key":_key}){}
 		
